// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exclude #2 1`] = `
[
  "already.gz",
  "image.png",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;

exports[`exclude #3 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;

exports[`exclude #4 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;

exports[`exclude 1`] = `
[
  "already.gz",
  "image.png",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;

exports[`include #2 1`] = `
[
  "already.gz",
  "image.png",
  "index.css",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
]
`;

exports[`include 1`] = `
[
  "already.gz",
  "image.png",
  "index.css",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
]
`;

exports[`mtime 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;

exports[`outdir 1`] = `
[
  "already.gz",
  "dist/image.png.br",
  "dist/image.png.gz",
  "dist/index.css.br",
  "dist/index.css.gz",
  "dist/index.html.br",
  "dist/index.html.gz",
  "dist/index.js.br",
  "dist/index.js.gz",
  "image.png",
  "index.css",
  "index.html",
  "index.js",
]
`;

exports[`outdir,extensionless 1`] = `
[
  "already.gz",
  "dist/image.png",
  "dist/index.css",
  "dist/index.html",
  "dist/index.js",
  "image.png",
  "index.css",
  "index.html",
  "index.js",
]
`;

exports[`simple 1`] = `
[
  "already.gz",
  "image.png",
  "image.png.br",
  "image.png.gz",
  "index.css",
  "index.css.br",
  "index.css.gz",
  "index.html",
  "index.html.br",
  "index.html.gz",
  "index.js",
  "index.js.br",
  "index.js.gz",
]
`;
